--- a/Getting started/Getting-started.ipynb
+++ b/Getting started/Getting-started.ipynb
@@ -43,7 +43,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Our documentation provides a in-depth set of instructions for all types of Operating Systems and we suggest visiting there first before proceeding with the notebook. For a quick summary, you will need to following these instructions:\n",
+    "Our documentation provides a in-depth set of instructions for all types of operating systems and we suggest reading through the 'Installation' guide before starting with this notebook. For a quick summary, you will need to following these instructions:\n",
     "- Follow the simple 'Recommended Setup on Windows/Linux/MacOS/Google Colab'\n",
     "- Open a new Terminal and install MlFinLab using\n",
     "\n",
