--- a/Getting started/Getting-started.ipynb
+++ b/Getting started/Getting-started.ipynb
@@ -237,7 +237,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We need to change our data format to ensure that our tools will read the data accordingly. Our documentation, for each function, will tell you the format the data should be in order to use the function. In this case, our data should be in `[date_time, price, volume]` format."
+    "We need to change our data format to match the format that MLFinlab expects as input. You can read the documentation for each function to determine which input format to use. In this particular case, our DataFrame should have `["date_time", "price", "volume"]` columns."
    ]
   },
   {
