--- a/Getting started/Getting-started.ipynb
+++ b/Getting started/Getting-started.ipynb
@@ -497,7 +497,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Please refer to our documentation for more details on how <b>MlFinLab</b> could be utilised to create other data structures. \n",
+    "Please refer to our documentation for more details on how `mlfinlab` could be utilised to create other data structures. \n",
     "\n",
     "Once you have dollars bars, for instance, there are several analyses and strategies you can employ. Here are a few:\n",
     "- Statistical Analysis\n",
