--- a/Getting started/Getting-started.ipynb
+++ b/Getting started/Getting-started.ipynb
@@ -522,7 +522,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is the process of assigning target labels or categories to data points. It involves assigning a specific outcome or classification to each data instance based on certain criteria or rules. It is important when it comes to predictive modeling tasks. The following techniques are available in <b>MlFinLab</b>, accompanied with an example notebook in our documentation :\n",
+    "This is the process of assigning target labels to data points. It involves assigning a specific outcome or classification to each data instance based on certain criteria or rules. It is important when it comes to predictive modeling tasks. The following techniques are cover a couple of the labelling methods available in `mlfinlab` :\n",
     "- Raw Returns\n",
     "- Fixed Horizon\n",
     "- Excess of Mean\n",
