--- a/Getting started/Getting-started.ipynb
+++ b/Getting started/Getting-started.ipynb
@@ -499,7 +499,7 @@
    "source": [
     "Please refer to our documentation for more details on how `mlfinlab` could be utilised to create other data structures. \n",
     "\n",
-    "Once you have dollars bars, for instance, there are several analyses and strategies you can employ. Here are a few:\n",
+    "Once you have bars, there are several analyses and strategies you can employ. Here are a few possibilities:\n",
     "- Statistical Analysis\n",
     "- Trend Identification\n",
     "- Volatility Estimation\n",
