--- a/Getting started/Getting-started.ipynb
+++ b/Getting started/Getting-started.ipynb
@@ -333,7 +333,7 @@
     "\n",
     "Time, tick, volume and dollar bars are the four main types of standard bar methods. \n",
     "\n",
-    "For illustrative purposes we will only focus on dollar bars, being they are the most stable of the four. They are the most stable because for instance they do not account for time, rather for movements in prices and they can help filter out noise and focus on significant price movements, potentially providing a clearer view of market trends."
+    "In this example, we will only focus on dollar bars, as they are usually considered the most stable: dollar bars do not account for time, but rather for movements in prices and they can help filter out noise and focus on significant price movements, potentially providing a clearer view of market trends."
    ]
   },
   {
