--- a/Getting started/Getting-started.ipynb
+++ b/Getting started/Getting-started.ipynb
@@ -329,7 +329,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "When analysing financial data, unstructured data sets, in this case tick data, are commonly transformed into a structured format referred to as bars, where a bar usually represents an observation of open, high, low and close prices as well as the volume traded, for a certain interval. <b>MlFinLab</b> implements tick, volume, and dollar bars using traditional standard bar methods as well as the less common information driven bars.\n",
+    "Tick data is commonly transformed into a structured format referred to as bars, where a bar usually represents an observation of open, high, low and close prices as well as the volume traded, for a certain interval. `mlfinlab` implements tick, volume, and dollar bars using traditional standard bar methods as well as the less common information driven bars.\n",
     "\n",
     "Time, tick, volume and dollar bars are the four main types of standard bar methods. \n",
     "\n",
