--- a/Getting started/Getting-started.ipynb
+++ b/Getting started/Getting-started.ipynb
@@ -565,7 +565,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b>MlFinLab</b> is equiped with helper functions, such as get_daily_vol, which  are auxiliary functions or utilities that assist in various tasks related to model development, data preprocessing, analysis, and evaluation. They were created to simplify complex operations, improve code reusability, and enhance the overall efficiency of the modeling process. We wil show some of them in this notebook, but more can be seen in the documentation."
+    "`mlfinlab` comes with helper functions, such as `get_daily_vol`, which can assist in various tasks related to model development, data preprocessing, analysis, and evaluation. They were created to simplify complex operations, improve code reusability, and enhance the overall efficiency of the modelling process."
    ]
   },
   {
