--- a/Getting started/Getting-started.ipynb
+++ b/Getting started/Getting-started.ipynb
@@ -615,7 +615,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Filters are a valuable feature in financial machine learning that enable users and researchers to selectively pinpoint and examine particular events. They function by using a specific conditional trigger, allowing researchers to concentrate on the most important market data and disregard irrelevant noise that would otherwise skew the analysis.\n",
+    "Filters are a valuable feature in financial machine learning that enable users to selectively pinpoint and examine particular events. They function by using a specific conditional trigger, allowing you to concentrate on the most important market data and disregard irrelevant noise that would otherwise skew the analysis.\n",
     "\n",
     "Our documentation covers a lot more filters that can be used, for now we will focus on CUSUM Filter.\n",
     "\n",
