--- a/Getting started/Getting-started.ipynb
+++ b/Getting started/Getting-started.ipynb
@@ -237,7 +237,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We need to change our data format to match the format that MLFinlab expects as input. You can read the documentation for each function to determine which input format to use. In this particular case, our DataFrame should have `["date_time", "price", "volume"]` columns."
+    "We need to change our data format to ensure that our tools will read the data accordingly. Our documentation, for each function, will tell you the format the data should be in order to use the function. In this case, our data should be in `[date_time, price, volume]` format."
    ]
   },
   {
@@ -329,11 +329,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tick data is commonly transformed into a structured format referred to as bars, where a bar usually represents an observation of open, high, low and close prices as well as the volume traded, for a certain interval. `mlfinlab` implements tick, volume, and dollar bars using traditional standard bar methods as well as the less common information driven bars.\n",
+    "When analysing financial data, unstructured data sets, in this case tick data, are commonly transformed into a structured format referred to as bars, where a bar usually represents an observation of open, high, low and close prices as well as the volume traded, for a certain interval. <b>MlFinLab</b> implements tick, volume, and dollar bars using traditional standard bar methods as well as the less common information driven bars.\n",
     "\n",
     "Time, tick, volume and dollar bars are the four main types of standard bar methods. \n",
     "\n",
-    "In this example, we will only focus on dollar bars, as they are usually considered the most stable: dollar bars do not account for time, but rather for movements in prices and they can help filter out noise and focus on significant price movements, potentially providing a clearer view of market trends."
+    "For illustrative purposes we will only focus on dollar bars, being they are the most stable of the four. They are the most stable because for instance they do not account for time, rather for movements in prices and they can help filter out noise and focus on significant price movements, potentially providing a clearer view of market trends."
    ]
   },
   {
@@ -497,9 +497,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Please refer to our documentation for more details on how `mlfinlab` could be utilised to create other data structures. \n",
+    "Please refer to our documentation for more details on how <b>MlFinLab</b> could be utilised to create other data structures. \n",
     "\n",
-    "Once you have bars, there are several analyses and strategies you can employ. Here are a few possibilities:\n",
+    "Once you have dollars bars, for instance, there are several analyses and strategies you can employ. Here are a few:\n",
     "- Statistical Analysis\n",
     "- Trend Identification\n",
     "- Volatility Estimation\n",
@@ -522,7 +522,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is the process of assigning target labels to data points. It involves assigning a specific outcome or classification to each data instance based on certain criteria or rules. It is important when it comes to predictive modeling tasks. The following techniques are cover a couple of the labelling methods available in `mlfinlab` :\n",
+    "This is the process of assigning target labels or categories to data points. It involves assigning a specific outcome or classification to each data instance based on certain criteria or rules. It is important when it comes to predictive modeling tasks. The following techniques are available in <b>MlFinLab</b>, accompanied with an example notebook in our documentation :\n",
     "- Raw Returns\n",
     "- Fixed Horizon\n",
     "- Excess of Mean\n",
@@ -565,7 +565,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`mlfinlab` comes with helper functions, such as `get_daily_vol`, which can assist in various tasks related to model development, data preprocessing, analysis, and evaluation. They were created to simplify complex operations, improve code reusability, and enhance the overall efficiency of the modelling process."
+    "<b>MlFinLab</b> is equiped with helper functions, such as get_daily_vol, which  are auxiliary functions or utilities that assist in various tasks related to model development, data preprocessing, analysis, and evaluation. They were created to simplify complex operations, improve code reusability, and enhance the overall efficiency of the modeling process. We wil show some of them in this notebook, but more can be seen in the documentation."
    ]
   },
   {
@@ -615,7 +615,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Filters are a valuable feature in financial machine learning that enable users to selectively pinpoint and examine particular events. They function by using a specific conditional trigger, allowing you to concentrate on the most important market data and disregard irrelevant noise that would otherwise skew the analysis.\n",
+    "Filters are a valuable feature in financial machine learning that enable users and researchers to selectively pinpoint and examine particular events. They function by using a specific conditional trigger, allowing researchers to concentrate on the most important market data and disregard irrelevant noise that would otherwise skew the analysis.\n",
     "\n",
     "Our documentation covers a lot more filters that can be used, for now we will focus on CUSUM Filter.\n",
     "\n",
