--- a/Getting started/Getting-started.ipynb
+++ b/Getting started/Getting-started.ipynb
@@ -40,7 +40,7 @@
     "\n",
     "- Feature Importance: A glimpse of a simple model and show which features in that model are mostly influencing the output variable.\n",
     "\n",
-    "- CLustering: A glimpse of our incredible ONC algorithm that takes away the guessing game in K-Means clustering."
+    "- Clustering: A glimpse of our incredible ONC algorithm that takes away the guessing game in K-Means clustering."
    ]
   },
   {
