made recommended changes

--- a/Getting started/Getting-started.ipynb
+++ b/Getting started/Getting-started.ipynb
@@ -517,7 +517,7 @@
     "\n",
     "Triple-barrier labeling will be demonstrated in this notebook.\n",
     "\n",
-    "The most-common labeling method used in financial academia is the fixed-time horizon method. While ubiquitous, this method has many drawbacks which can be mitigated by using the triple-barrier method. \n",
+    "A common labeling method used in financial academia is the fixed-time horizon method. While ubiquitous, this method has many drawbacks which can be mitigated by using the triple-barrier method. \n",
     "\n",
     "The main concept behind the triple-barrier method is that we have three barriers: an upper barrier, a lower barrier, and a vertical barrier. The upper barrier represents the threshold an observation’s return needs to reach in order to be considered a buying opportunity (and assigned a label of 1), the lower barrier represents the threshold an observation’s return needs to reach in order to be considered a selling opportunity (a label of -1), and the vertical barrier represents the amount of time an observation has to reach it’s given return in either direction before it is assigned a label of 0 (indicating no trade should take place).\n"
    ]
@@ -1596,7 +1596,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Sequential Boostrap\n",
+    "#### Sequential Boostrap\n",
     "\n",
     "\n",
     "Sequential bootstrapping, also known as time series bootstrapping, is a resampling technique used in quantitative finance to generate simulated data that captures the dependence structure and dynamics of a time series. The primary goal is to generate new time series that preserve the characteristics of the original time series while introducing randomness. This technique is particularly useful when dealing with financial time series data, which often exhibit serial correlation, volatility clustering, and other time-dependent properties.\n",
